--- a/app/views/clientes/new.html.erb
+++ b/app/views/clientes/new.html.erb
@@ -1,8 +1,6 @@
 <!-- /*_new.html.erb*/ -->
+<div class="container mt-4 ">
 <h1 class="text-center">Novo cliente</h1>
 
 <%= render "form", cliente: @cliente %>
-
-<div class="text-center mt-3">
-  <%= link_to "Voltar", clientes_path, class: "btn btn-secondary" %>
 </div>
