--- a/app/views/equipes/_form.html.erb
+++ b/app/views/equipes/_form.html.erb
@@ -1,13 +1,14 @@
-<div class="container mt-5">
-  <div class="card mx-auto col-6" >
-    <div class="card-header">
-      <h5 class="card-title text-center">Formulário da equipe</h5>
-    </div>
+<div class="container mt-4">
+  <div class=" col-8 mx-auto">
+    <%= link_to "Voltar", equipes_path, class: "btn btn-danger mb-3" %>
+  <div class="card ">
+  
     <div class="card-body">
-      <%= form_with(model: equipe, local: true) do |form| %>
+      <%= form_with(model: equipe, class: "form") do |form| %>
+        <!-- Se houver erros, exiba uma mensagem -->
         <% if equipe.errors.any? %>
           <div class="alert alert-danger">
-            <h6><%= pluralize(equipe.errors.count, "error") %> prohibited this equipe from being saved:</h6>
+            <h2><%= pluralize(equipe.errors.count, "error") %> prohibited this veiculo from being saved:</h2>
             <ul>
               <% equipe.errors.each do |error| %>
                 <li><%= error.full_message %></li>
@@ -16,20 +17,23 @@
           </div>
         <% end %>
 
-        <div class="mb-3">
-          <%= form.label :nome, class: "form-label" %>
+        <!-- Campos do formulário -->
+        <div class="form-group">
+          <%= form.label :nome %>
           <%= form.text_field :nome, class: "form-control" %>
         </div>
-
-        <div class="mb-3">
-          <%= form.label :descricao, class: "form-label" %>
+        <div class="form-group">
+          <%= form.label :descricao %>
           <%= form.text_field :descricao, class: "form-control" %>
         </div>
 
-        <div class="text-center">
-          <%= form.submit class: "btn btn-primary col-6" %>
+      
+         <div class="form-group mt-3 text-center"> 
+          <%= form.submit "Adicionar" , class: "btn btn-primary col-sm-12", style: "height: 8vh;" %>
         </div>
       <% end %>
     </div>
   </div>
 </div>
+</div>
+        
