--- a/app/views/mecanicos/_form.html.erb
+++ b/app/views/mecanicos/_form.html.erb
@@ -1,11 +1,14 @@
-<div class="card mt-5 col-6 mx-auto">
-  <div class="card">
+<div class="container mt-4">
+  <div class=" col-8 mx-auto">
+    <%= link_to "Voltar", mecanicos_path, class: "btn btn-danger mb-3" %>
+  <div class="card ">
+  
     <div class="card-body">
-      <%= form_with(model: mecanico, class: "mt-5") do |form| %>
+      <%= form_with(model: mecanico, class: "form") do |form| %>
+        <!-- Se houver erros, exiba uma mensagem -->
         <% if mecanico.errors.any? %>
           <div class="alert alert-danger">
-            <h2><%= pluralize(mecanico.errors.count, "error") %> prohibited this mecanico from being saved:</h2>
-
+            <h2><%= pluralize(mecanico.errors.count, "error") %> prohibited this veiculo from being saved:</h2>
             <ul>
               <% mecanico.errors.each do |error| %>
                 <li><%= error.full_message %></li>
@@ -14,30 +17,37 @@
           </div>
         <% end %>
 
-        <div class="mb-3">
-          <%= form.label :nome, class: "form-label" %>
+        <!-- Campos do formulário -->
+        <div class="form-group">
+          <%= form.label :nome %>
           <%= form.text_field :nome, class: "form-control" %>
         </div>
-
-        <div class="mb-3">
-          <%= form.label :funcao, class: "form-label" %>
-          <%= form.text_field :funcao, class: "form-control" %>
-        </div>
-
-        <div class="mb-3">
-          <%= form.label :especialidade, class: "form-label" %>
+<div class="form-group">
+          <%= form.label :especialidade %>
           <%= form.text_field :especialidade, class: "form-control" %>
         </div>
 
-        <div class="mb-3">
-          <%= form.label :equipe_id, class: "form-label" %>
+        <div class="form-group">
+          <%= form.label :telefone %>
+          <%= form.text_field :telefone, class: "form-control" %>
+        </div>
+
+        <div class="form-group">
+          <%= form.label :email %>
+          <%= form.text_field :email, class: "form-control" %>
+        </div>
+
+        <div class="form-group">
+           <%= form.label :equipe_id, class: "form-label" %>
           <%= form.collection_select(:equipe_id, Equipe.all, :id, :nome, { prompt: 'Selecione a equipe' }, { class: 'form-select' }) %>
         </div>
 
-        <div class="mb-3">
-          <%= form.submit class: "btn btn-primary" %>
+         <div class="form-group mt-3 text-center"> 
+          <%= form.submit "Adicionar" , class: "btn btn-primary col-sm-12", style: "height: 8vh;" %>
         </div>
       <% end %>
     </div>
   </div>
 </div>
+</div>
+        
