--- a/app/views/servicos/new.html.erb
+++ b/app/views/servicos/new.html.erb
@@ -1,11 +1,6 @@
-<div class="container mt-4 d-flex justify-content-center align-items-center flex-column">
-  <h1 class="mb-4">Novo Servico</h1>
+<div class="container mt-4 ">
+  <h1 class="text-center">Novo Servico</h1>
 
   <%= render "form", servico: @servico %>
 
-  <br>
-
-  <div>
-    <%= link_to "Voltar", servicos_path, class: "btn btn-secondary" %>
-  </div>
 </div>
