--- a/app/views/veiculos/new.html.erb
+++ b/app/views/veiculos/new.html.erb
@@ -1,11 +1,6 @@
-<div class="container mt-4 mx-auto d-flex flex-column justify-content-center align-items-center">
-  <h1 class="mx-auto">Novo veiculo</h1>
+<!-- /*_new.html.erb*/ -->
+<div class="container mt-4 ">
+<h1 class="text-center">Novo Veiculo</h1>
 
-  <%= render "form", veiculo: @veiculo %>
-
-  <br>
-
-  <div class="text-center">
-    <%= link_to "voltar", veiculos_path, class: "btn btn-secondary mx-auto" %>
-  </div>
+<%= render "form", veiculo: @veiculo %>
 </div>
