--- a/app/views/clientes/edit.html.erb
+++ b/app/views/clientes/edit.html.erb
@@ -1,9 +1,6 @@
 <!-- /*_edit.html.erb*/ -->
-<h1 class="text-center">Editing cliente</h1>
+<h1 class="text-center">Editar cliente</h1>
 
 <%= render "form", cliente: @cliente %>
 
-<div class="text-center mt-3">
-  <%= link_to "Exibir", @cliente, class: "btn btn-primary" %> |
-  <%= link_to "voltar", clientes_path, class: "btn btn-secondary" %>
-</div>
+
