--- a/app/views/clientes/index.html.erb
+++ b/app/views/clientes/index.html.erb
@@ -1,31 +1,42 @@
 <!-- /*_index.html.erb*/ -->
-<div class="container mt-4 text-center">
-<p style="color: green; text-align: center;"><%= notice %></p>
+<div class="container mt-4">
+  <p style="color: green; text-align: center;"><%= notice %></p>
 
-<h1 class="text-center">Clientes</h1>
+  <h1 class="text-center">Clientes</h1>
 
-    <%= link_to "Novo Cliente", new_cliente_path, class: "btn btn-success  mt-3 mb-3" %>
- 
+  <%= link_to "Novo Cliente", new_cliente_path, class: "btn btn-success  mt-3 mb-3" %>
+
   <div class="table-responsive">
-    <table class="table table-bordered table-striped mx-auto col-8">
+    <table class="table table-striped table-bordered-dark mx-auto col-8">
       <thead class="thead-dark">
         <tr>
           <th>Nome</th>
           <th>Telefone</th>
-          <th>CPF</th>
-          <th>RG</th>
+          <th class="d-none d-sm-table-cell">Email</th>
+          <th class="d-none d-sm-table-cell">CPF</th>
+          <th class="d-none d-sm-table-cell">RG</th>
           <th>Ações</th>
         </tr>
       </thead>
       <tbody>
-       
-        <% @clientes.each do |cliente| %>
-  <%= render cliente %>
-<% end %>
 
-  
+        <% @clientes.each do |cliente| %>
+          <%= render cliente %>
+        <% end %>
+
       </tbody>
     </table>
   </div>
-
 </div>
+
+<style>
+  .table-bordered-dark tbody tr,
+  .table-bordered-dark thead tr {
+    border-color: #000;
+  }
+
+  .table-bordered-dark th,
+  .table-bordered-dark td {
+    border: 1px solid #000;
+  }
+</style>
