--- a/app/views/clientes/show.html.erb
+++ b/app/views/clientes/show.html.erb
@@ -1,11 +1,14 @@
 <!-- /*_show.html.erb*/ -->
-<div class="container mt-4 text-center">
-  <%= render @cliente %>
-
+<div class="container mt-4">
   <div class="mt-3">
-    <%= link_to "Editar", edit_cliente_path(@cliente), class: "btn btn-primary" %> |
-    <%= link_to "Voltar", clientes_path, class: "btn btn-secondary" %>
-
-    <%= button_to "Deletar", @cliente, method: :delete, data: { confirm: "Tem certeza?" }, class: "btn btn-danger mt" %>
+    <%= link_to "Voltar", clientes_path, class: "btn btn-danger" %>
   </div>
-</div>
+
+  <div class="card mt-3">
+    <div class="card-header bg-primary text-white">
+      Informações do Cliente
+    </div>
+    <div class="card-body">
+      <%= render 'cliente_info2', cliente: @cliente %>
+    </div>
+  </div>
