--- a/app/views/equipes/edit.html.erb
+++ b/app/views/equipes/edit.html.erb
@@ -1,10 +1,3 @@
-<h1>eitar equipe</h1>
+<h1 class="text-center">Nova Equipe</h1>
 
 <%= render "form", equipe: @equipe %>
-
-<br>
-
-<div class="text-center">
-  <%= link_to "exibir", @equipe, class: "btn btn-primary" %> |
-  <%= link_to "voltar", equipes_path, class: "btn btn-secondary" %>
-</div>
