--- a/app/views/equipes/index.html.erb
+++ b/app/views/equipes/index.html.erb
@@ -1,21 +1,23 @@
-<div class="container mt-4 text-center">
-<div>
+<!-- /*_index.html.erb*/ -->
+<div class="container mt-4">
+  <p style="color: green; text-align: center;"><%= notice %></p>
+
   <h1 class="text-center">Equipes</h1>
 
-    <%= link_to "Nova equipe", new_equipe_path, class: "btn btn-success  mt-3 mb-3" %>
+  <%= link_to "Nova equipe", new_equipe_path, class: "btn btn-success  mt-3 mb-3" %>
 
-
-  <table class="table table-bordered mx-auto">
-    <thead class="thead-dark">
+  <div class="table-responsive">
+    <table class="table table-striped table-bordered-dark mx-auto col-8">
+      <thead class="thead-dark">
       <tr>
         <th>Nome</th>
-        <th>Descrição</th>
+        <th class="d-none d-sm-table-cell">Descrição</th>
         <th>Mecânicos</th>
         <th>Ações</th>
       </tr>
     </thead>
     <tbody>
-  <div id="equipes">
+ 
     <% if @equipes.present? %>
       <% @equipes.each do |equipe| %>
         <%= render equipe %>
@@ -24,11 +26,20 @@
     <% else %>
       <p>No equipes found.</p>
     <% end %>
+  </tbody>
+    </table>
   </div>
- </tbody>
-  </table>
+</div>
 
 
- 
-</div>
-</div>
+<style>
+  .table-bordered-dark tbody tr,
+  .table-bordered-dark thead tr {
+    border-color: #000;
+  }
+
+  .table-bordered-dark th,
+  .table-bordered-dark td {
+    border: 1px solid #000;
+  }
+</style>
