--- a/app/views/equipes/show.html.erb
+++ b/app/views/equipes/show.html.erb
@@ -1,9 +1,14 @@
-<p style="color: green;"><%= notice %></p>
+<!-- show.html.erb -->
+<div class="container mt-4">
+  <div class="mt-3">
+    <%= link_to "Voltar", equipes_path, class: "btn btn-danger" %>
+  </div>
 
-<%= render @equipe %>
-
-<div class="text-center mt-3">
-  <%= link_to "Editar", edit_equipe_path(@equipe), class: "btn btn-primary mr-2" %>
-  <%= link_to "voltar", equipes_path, class: "btn btn-secondary mr-2" %>
-  <%= button_to "excluir", @equipe, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger mt-3" %>
-</div>
+  <div class="card mt-3">
+    <div class="card-header bg-primary text-white">
+      Informações da equipe
+    </div>
+    <div class="card-body">
+      <%= render 'equipe_info2', equipe: @equipe %>
+    </div>
+  </div>
