--- a/app/views/mecanicos/index.html.erb
+++ b/app/views/mecanicos/index.html.erb
@@ -1,26 +1,43 @@
-<div class="container mt-4 text-center">
-<p class="text-center text-success"><%= notice %></p>
+<!-- /*_index.html.erb*/ -->
+<div class="container mt-4">
+  <p style="color: green; text-align: center;"><%= notice %></p>
 
-<h1 class="text-center">Mecanicos</h1>
+  <h1 class="text-center">Mecânicos</h1>
 
-  <%= link_to "Novo Mecânico", new_mecanico_path, class: "btn btn-success mt-3 mb-3" %>
+  <%= link_to "Novo Mecânico", new_mecanico_path, class: "btn btn-success  mt-3 mb-3" %>
 
-<table class="table table-bordered">
-  <thead class="thead-dark">
+  <div class="table-responsive">
+    <table class="table table-striped table-bordered-dark mx-auto col-8">
+      <thead class="thead-dark">
     <tr>
       <th>Nome</th>
-      <th>Especialidade</th>
+      <th class="d-none d-sm-table-cell">Especialidade</th>
+      <th>Telefone</th>
+      <th class="d-none d-sm-table-cell">Email</th>
       <th>Equipe</th>
       <th>Ações</th>
     </tr>
   </thead>
   <tbody>
    
-<div id="mecanicos" class="text-center">
+
   <% @mecanicos.each do |mecanico| %>
     <%= render mecanico %>
   <% end %>
+  </tbody>
+    </table>
+  </div>
 </div>
-</tbody>
-</table>
-</div>
+
+
+<style>
+  .table-bordered-dark tbody tr,
+  .table-bordered-dark thead tr {
+    border-color: #000;
+  }
+
+  .table-bordered-dark th,
+  .table-bordered-dark td {
+    border: 1px solid #000;
+  }
+</style>
