--- a/app/views/mecanicos/new.html.erb
+++ b/app/views/mecanicos/new.html.erb
@@ -1,13 +1,5 @@
-<div class="container">
-  <div class="text-center">
-    <h1>Novo mecanico</h1>
+<div class="container mt-4 ">
+<h1 class="text-center">Novo Mecânico</h1>
 
-    <%= render "form", mecanico: @mecanico %>
-
-    <br>
-
-    <div>
-      <%= link_to "voltar", mecanicos_path, class: "btn btn-secondary" %>
-    </div>
-  </div>
+<%= render "form", mecanico: @mecanico %>
 </div>
