--- a/app/views/pecas/index.html.erb
+++ b/app/views/pecas/index.html.erb
@@ -1,17 +1,18 @@
-<div class="container mt-5">
-    <div class="text-center">
-      <p style="color: green;"><%= notice %></p>
-      <h1>Peças</h1>
- <%= link_to "Nova Peca", new_peca_path, class: "btn btn-success mt-3" %>
- <div class="container mt-4">
+<div class="container mt-4">
+  <p style="color: green; text-align: center;"><%= notice %></p>
+
+  <h1 class="text-center">Peças</h1>
+
+  <%= link_to "Nova Peça", new_peca_path, class: "btn btn-success  mt-3 mb-3" %>
 
   <div class="table-responsive">
-    <table class="table table-bordered mx-auto">
+    <table class="table table-striped table-bordered-dark mx-auto col-8">
       <thead class="thead-dark">
         <tr>
           <th>Nome</th>
-          <th>Quantidade</th>
-          <th>Preço por Peça</th>
+          <th  class="d-none d-sm-table-cell">Descrição</th>
+          <th  class="d-none d-sm-table-cell">Quantidade</th>
+          <th>Preço unitário</th>
           <th>Ações</th>
         </tr>
       </thead>
@@ -23,14 +24,20 @@
   
   
 <% end %>
-
-</div>
-   </tbody>
+</tbody>
     </table>
   </div>
 </div>
 
-    </div>
-  </div>
 
+<style>
+  .table-bordered-dark tbody tr,
+  .table-bordered-dark thead tr {
+    border-color: #000;
+  }
 
+  .table-bordered-dark th,
+  .table-bordered-dark td {
+    border: 1px solid #000;
+  }
+</style>
