--- a/app/views/pecas/show.html.erb
+++ b/app/views/pecas/show.html.erb
@@ -1,18 +1,14 @@
-
+<!-- show.html.erb -->
 <div class="container mt-4">
-  <div class="row justify-content-center">
-    <div class="col-md-6">
+  <div class="mt-3">
+    <%= link_to "Voltar",pecas_path, class: "btn btn-danger" %>
+  </div>
 
-      
-
-      <%= render @peca %>
-
-      <div class="text-center mt-3">
-        <%= link_to "Editar", edit_peca_path(@peca), class: "btn btn-primary mr-2" %>
-        <%= link_to "Voltar", pecas_path, class: "btn btn-secondary mr-2" %>
-        <%= button_to "Excluir", @peca, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger mt-3" %>
-      </div>
-
+  <div class="card mt-3">
+    <div class="card-header bg-primary text-white">
+      Informações da peça
+    </div>
+    <div class="card-body">
+      <%= render 'peca_info2', peca: @peca %>
     </div>
   </div>
-</div>
