--- a/app/views/servicos/_form.html.erb
+++ b/app/views/servicos/_form.html.erb
@@ -1,6 +1,10 @@
 <div class="container mt-5">
   <div class="row justify-content-center">
     <div class="col-8">
+    
+  <div>
+    <%= link_to "Voltar", servicos_path, class: "btn btn-danger mb-3" %>
+  </div>
       <div class="card">
         <div class="card-body">
 
@@ -21,6 +25,10 @@
               <%= form.label :nome, class: "form-label" %>
               <%= form.text_field :nome, class: "form-control" %>
             </div>
+               <div class="mb-3">
+              <%= form.label :descricao, class: "form-label" %>
+              <%= form.text_field :descricao, class: "form-control" %>
+            </div>
 
             <div class="mb-3">
               <%= form.label :valor, class: "form-label" %>
@@ -28,7 +36,7 @@
             </div>
 
            <div class="form-group mt-3 text-center"> 
-              <%= form.submit class: "btn btn-primary col-8" %>
+              <%= form.submit "Adicionar", class: "btn btn-primary col-sm-12", style: "height: 8vh;" %>
             </div>
           <% end %>
 
