--- a/app/views/servicos/index.html.erb
+++ b/app/views/servicos/index.html.erb
@@ -1,27 +1,41 @@
-<p style="color: green"><%= notice %></p>
-
-<h1 class="text-center">Serviços</h1>
-<div class="text-center mt-3 mb-3">
-  <%= link_to "Novo servico", new_servico_path, id: "new-servico-link", class: "btn btn-secondary" %>
-</div>
-<p style="color: green"><%= notice %></p>
-
+<!-- /*_index.html.erb*/ -->
 <div class="container mt-4">
+  <p style="color: green; text-align: center;"><%= notice %></p>
 
-  <table class="table table-striped table-bordered">
-    <thead class="thead-dark">
+  <h1 class="text-center">Serviços</h1>
+
+  <%= link_to "Novo Serviço", new_servico_path, class: "btn btn-success  mt-3 mb-3" %>
+
+  <div class="table-responsive">
+    <table class="table table-striped table-bordered-dark mx-auto col-8">
+      <thead class="thead-dark">
       <tr>
-        <th scope="col">Nome</th>
-        <th scope="col">Valor</th>
-        <th scope="col">Ações</th>
+        <th >Nome</th>
+        <th class="d-none d-sm-table-cell">Descrição</th>
+        <th >Valor</th>
+        <th ">Ações</th>
       </tr>
     </thead>
     <tbody>
 <% @servicos.each do |servico| %>
   <%= render servico %>
 <% end %>
-          </tbody>
-  </table>
+       </tbody>
+    </table>
+  </div>
 </div>
+
+
+<style>
+  .table-bordered-dark tbody tr,
+  .table-bordered-dark thead tr {
+    border-color: #000;
+  }
+
+  .table-bordered-dark th,
+  .table-bordered-dark td {
+    border: 1px solid #000;
+  }
+</style>
 
 
