--- a/app/views/veiculos/_form.html.erb
+++ b/app/views/veiculos/_form.html.erb
@@ -1,8 +1,8 @@
 <div class="container mt-4">
-  <div class="card col-8 mx-auto">
-    <div class="card-header">
-      <h5 class="mb-0">Formulário de Veículo</h5>
-    </div>
+  <div class=" col-8 mx-auto">
+    <%= link_to "Voltar", veiculos_path, class: "btn btn-danger mb-3" %>
+  <div class="card ">
+  
     <div class="card-body">
       <%= form_with(model: veiculo, class: "form") do |form| %>
         <!-- Se houver erros, exiba uma mensagem -->
@@ -22,6 +22,10 @@
           <%= form.label :modelo %>
           <%= form.text_field :modelo, class: "form-control" %>
         </div>
+<div class="form-group">
+          <%= form.label :ano %>
+          <%= form.text_field :ano, class: "form-control" %>
+        </div>
 
         <div class="form-group">
           <%= form.label :placa %>
@@ -38,11 +42,12 @@
           <%= form.collection_select(:cliente_id, @clientes, :id, :nome, { prompt: true }, { class: "form-control" }) %>
         </div>
 
-        <!-- Botão de envio centralizado -->
-        <div class="form-group text-center mt-3">
-          <%= form.submit "Salvar", class: "btn btn-primary col-6" %>
+        
+         <div class="form-group mt-3 text-center"> 
+          <%= form.submit "Adicionar" , class: "btn btn-primary col-sm-12", style: "height: 8vh;" %>
         </div>
       <% end %>
     </div>
   </div>
+</div>
 </div>
