--- a/app/views/veiculos/_veiculo.html.erb
+++ b/app/views/veiculos/_veiculo.html.erb
@@ -1,16 +1,14 @@
+<!-- /*_cliente.html.erb*/ -->
+<tr>
+  <%= render 'veiculo_info', veiculo: veiculo %>
+  <td >
+    <%= link_to veiculo, class:"text-decoration-none"  do%>
+    <i class="fa-solid fa-eye link-dark "></i>
+       <%end%>
 
-      
-        <tr>
-          <td><%= veiculo.modelo %></td>
-          <td><%= veiculo.placa %></td>
-          <td><%= veiculo.cor %></td>
-          <td><%= veiculo.cliente.nome if veiculo.cliente %></td>
-          <td>
-           
-              <%= link_to "exibir", veiculo, class: "btn btn-primary" %>
-          
-          </td>
-        </tr>
-      
+    <%= link_to  edit_veiculo_path(veiculo), class:"text-decoration-none"  do %>
+    <i class="fa-solid fa-pen link-dark"></i>
+             <%end%>
    
-
+  </td>
+</tr>
