--- a/app/views/veiculos/edit.html.erb
+++ b/app/views/veiculos/edit.html.erb
@@ -1,10 +1,4 @@
-<div class="container mt-4 text-center">
-  <h1>Editar veiculo</h1>
+<!-- /*_edit.html.erb*/ -->
+<h1 class="text-center">Editar veiculo</h1>
 
-  <%= render "form", veiculo: @veiculo %>
-
-  <div class="mt-4">
-    <%= link_to "exibir", @veiculo, class: "btn btn-primary mr-2" %>
-    <%= link_to "voltar", veiculos_path, class: "btn btn-secondary" %>
-  </div>
-</div>
+<%= render "form", veiculo: @veiculo %>
