--- a/app/views/veiculos/index.html.erb
+++ b/app/views/veiculos/index.html.erb
@@ -1,30 +1,41 @@
-<div class="container mt-4 text-center">
-  <p style="color: green; font-size: 18px;"><%= notice %></p>
-
-  <h1 style="margin-bottom: 20px;">Veiculos</h1>
- <%= link_to "novo veiculo", new_veiculo_path, class: "btn btn-success mt-4" %>
+<!-- /*_index.html.erb*/ -->
 <div class="container mt-4">
+  <p style="color: green; text-align: center;"><%= notice %></p>
 
-  <table class="table table-striped table-bordered">
-    <thead class="thead-dark">
-      <tr>
-        <th scope="col">Modelo</th>
-        <th scope="col">Placa</th>
-        <th scope="col">Cor</th>
-        <th scope="col">Dono</th>
-        <th scope="col">Ações</th> <!-- Nova coluna para ações -->
-      </tr>
-    </thead>
-    <tbody>
-  <div id="veiculos">
-    <% @veiculos.each do |veiculo| %>
-      <%= render veiculo %>
-    <% end %>
-        </div>
-    </tbody>
-    
-  </table>
-  
+  <h1 class="text-center">Veiculos</h1>
+
+  <%= link_to "Novo Veiculo", new_veiculo_path, class: "btn btn-success  mt-3 mb-3" %>
+
+  <div class="table-responsive">
+    <table class="table table-striped table-bordered-dark mx-auto col-8">
+      <thead class="thead-dark">
+        <tr>
+          <th>Modelo</th>
+          <th class="d-none d-sm-table-cell">Ano</th>
+          <th>Placa</th>
+          <th class="d-none d-sm-table-cell">Cor</th>
+          <th>Dono</th>
+          <th>Ações</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @veiculos.each do |veiculo| %>
+          <%= render partial: 'veiculo', locals: { veiculo: veiculo } %>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
 </div>
- 
-</div>
+
+
+<style>
+  .table-bordered-dark tbody tr,
+  .table-bordered-dark thead tr {
+    border-color: #000;
+  }
+
+  .table-bordered-dark th,
+  .table-bordered-dark td {
+    border: 1px solid #000;
+  }
+</style>
