--- a/app/views/clientes/index.html.erb
+++ b/app/views/clientes/index.html.erb
@@ -1,33 +1,95 @@
 <!-- /*_index.html.erb*/ -->
 <div class="container mt-4">
-  <p style="color: green; text-align: center;"><%= notice %></p>
+ 
+   
 
-  <h1 class="text-center">Clientes</h1>
+      <p style="color: green; text-align: center;"><%= notice %></p>
 
-  <%= link_to "Novo Cliente", new_cliente_path, class: "btn btn-success  mt-3 mb-3" %>
+      <h1 class="text-center">Clientes</h1>
 
-  <div class="table-responsive">
-    <table class="table table-striped table-bordered-dark mx-auto col-8">
-      <thead class="thead-dark">
-        <tr>
-          <th>Nome</th>
-          <th>Telefone</th>
-          <th class="d-none d-sm-table-cell">Email</th>
-          <th class="d-none d-sm-table-cell">CPF</th>
-          <th class="d-none d-sm-table-cell">RG</th>
-          <th>Ações</th>
-        </tr>
-      </thead>
-      <tbody>
+      <%= form_tag clientes_path, method: :get, remote: true, class: "form-inline mt-3 mb-3" do %>
+        <div class="input-group">
+          <%= text_field_tag :search, params[:search], class: "form-control", id: "search", placeholder: "Pesquisar por nome" %>
+          <div class="input-group-append">
+            <%= submit_tag "Pesquisar", class: "btn btn-primary", id: "search_button" %>
+          </div>
+        </div>
 
-        <% @clientes.each do |cliente| %>
-          <%= render cliente %>
-        <% end %>
+          <div class="form-group mt-2">
+          <%= select_tag :order, options_for_select({ 'Nome (A-Z)' => 'nome', 'Data de Criação (mais recente primeiro)' => 'creation_date_desc', 'Data de Criação (mais antiga primeiro)' => 'creation_date_asc' }, params[:order]), class: "form-control ", id: "order" %>
+          <%= button_tag "Filtrar", class: "btn btn-secondary mt-2", id: "filter_button" %>
+        </div>
+      <% end %>
 
-      </tbody>
-    </table>
-  </div>
+      <%= link_to "Novo Cliente", new_cliente_path, class: "btn btn-success mt-3 mb-3" %>
+
+      <div class="table-responsive">
+        <table class="table table-striped table-bordered-dark">
+          <thead class="thead-dark">
+            <tr>
+              <th>Nome</th>
+              <th>Telefone</th>
+              <th class="d-none d-sm-table-cell">Email</th>
+              <th class="d-none d-sm-table-cell">CPF</th>
+              <th class="d-none d-sm-table-cell">RG</th>
+              <th>Ações</th>
+            </tr>
+          </thead>
+          <tbody>
+            <% @clientes.each do |cliente| %>
+              <%= render cliente %>
+            <% end %>
+          </tbody>
+        </table>
+      </div>
+  
+ 
 </div>
+
+<!-- Adicione este script ao final do seu arquivo para usar jQuery UI Autocomplete -->
+<script>
+  $(document).ready(function () {
+    $("#filter_button").click(function () {
+      filterData();
+    });
+
+    $("#search_button").click(function () {
+      // You can add any specific actions you want for the search button click
+      console.log("Search button clicked");
+    });
+
+    $("#search").autocomplete({
+      // ... (existing autocomplete configuration)
+    });
+
+    $('form').submit(function (e) {
+      e.preventDefault(); // Prevent the default form submission
+      filterData(); // Call the filter function on form submission
+      $("#search").val(''); // Limpa o valor do campo de pesquisa
+    });
+
+    function filterData() {
+      console.log("Applying filter...");
+
+      $.ajax({
+        url: "<%= clientes_path(format: :json) %>",
+        dataType: "json",
+        data: {
+          term: $("#search").val(),
+          order: $("#order").val(),
+        },
+        success: function (data) {
+          console.log("Filtered data received:", data);
+
+          // Process the filtered data as needed
+        },
+        error: function (err) {
+          console.error("Error in AJAX request:", err);
+        },
+      });
+    }
+  });
+</script>
 
 <style>
   .table-bordered-dark tbody tr,
@@ -38,5 +100,13 @@
   .table-bordered-dark th,
   .table-bordered-dark td {
     border: 1px solid #000;
+  }
+
+  .input-group {
+    margin-bottom: 15px;
+  }
+
+  .input-group-append {
+    cursor: pointer;
   }
 </style>
