--- a/app/views/ordem_servicos/index.html.erb
+++ b/app/views/ordem_servicos/index.html.erb
@@ -1,55 +1,64 @@
-<div class="container mt-4">
-  <h1 class="mb-4">Ordens de Serviço</h1>
-    <%= link_to 'Nova Ordem de Serviço', new_ordem_servico_path, class: 'btn btn-primary' %>
-  <table class="table table-striped table-bordered-dark">
-    <thead class="table-dark">
-      <tr>
-        <th>Veículo</th>
-        <th>Problema</th>
-        <th>Equipe</th>
-        <th>Status</th> 
-        <th>Ações</th>
-      </tr>
-    </thead>
-    <tbody>
-      <% @ordem_servicos.each do |ordem_servico| %>
+<!-- app/views/ordem_servicos/index.html.erb -->
+<% current_status = params[:status] || 'Todos' %>
+
+<div class="container mt-5">
+  <h1>Ordens de Serviço<%= " - Filtrando por #{current_status}" unless current_status == 'Todos' %></h1>
+
+  <div class="d-flex justify-content-between mb-3">
+    <div>
+      <%= link_to 'Nova OS', new_ordem_servico_path, class: 'btn btn-success' %>
+    </div>
+
+    <%= form_with(url: ordem_servicos_path, method: :get, class: 'form-inline') do |form| %>
+      <div class="form-group ml-auto">
+        <%= form.label :status, 'Filtrar por Status', class: 'mr-2' %>
+        <%= form.select :status, ['Todos', 'Recebido', 'Andamento', 'Concluído'], { prompt: 'Selecione um status' }, { class: 'form-control' } %>
+      </div>
+      <%= form.submit 'Filtrar', class: 'btn btn-primary ml-2' %>
+    <% end %>
+  </div>
+
+  <div class="table-responsive">
+    <table class="table table-striped table-bordered-dark mx-auto col-8">
+      <thead class="thead-dark">
         <tr>
-          <td><%= ordem_servico.veiculo.placa %></td>
-          <td><%= ordem_servico.problema_veiculo %></td>
-          <td><%= ordem_servico.equipe.nome %></td>
-          <td><%= ordem_servico.status %></td> 
-          <td>
-            <%= link_to ordem_servico, class:"text-decoration-none" do %>
-            <i class="fa-solid fa-eye link-dark "></i>
-         <%end%>
-            <%= link_to  edit_ordem_servico_path(ordem_servico),  class:"text-decoration-none " do%>
-            <i class="fa-solid fa-pen link-dark"></i>
-             <%end%>
-          <i class="fa-solid fa-trash"></i>
-           
-
-            <%= form_tag(update_status_ordem_servico_path(ordem_servico), method: :patch, class: 'd-inline') do %>
-              <%= select_tag 'status', options_for_select(['Recebido', 'Em Andamento', 'Concluído'], ordem_servico.status), class: 'form-select form-select-sm d-inline' %>
-              <div class="mt-2">
-              <%= button_tag(type: "submit" ) do %>
-                <i class="fa-solid fa-sync "></i>
-                    <% end %>
-                    </div>
-            <% end %>
-            
-          </td>
+          <th scope="col">Veículo</th>
+          <th class="d-none d-sm-table-cell" scope="col">Problema</th>
+          <th class="d-none d-sm-table-cell" scope="col">Equipe</th>
+          <th scope="col">Status</th>
+          <th scope="col">Ações</th>
         </tr>
-      <% end %>
-    </tbody>
-  </table>
-
+      </thead>
+      <tbody>
+        <% @ordem_servicos.each do |ordem_servico| %>
+          <% if current_status == 'Todos' || ordem_servico.status == current_status %>
+            <tr>
+              <td><%= ordem_servico.veiculo.placa %></td>
+              <td class="d-none d-sm-table-cell"><%= ordem_servico.problema %></td>
+              <td class="d-none d-sm-table-cell"><%= ordem_servico.equipe.nome %></td>
+              <td><%= ordem_servico.status %></td>
+              <td>
+                <%= link_to ordem_servico_path(ordem_servico), class: "text-decoration-none" do %>
+                  <i class="fa-solid fa-eye link-dark"></i>
+                <% end %>
+                <%= link_to edit_ordem_servico_path(ordem_servico), class: "text-decoration-none" do %>
+                  <i class="fa-solid fa-pen link-dark"></i>
+                <% end %>
+              </td>
+            </tr>
+          <% end %>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
 </div>
+
 <style>
-  /* Adicione este bloco de estilo para personalizar as bordas */
   .table-bordered-dark tbody tr,
   .table-bordered-dark thead tr {
     border-color: #000;
   }
+
   .table-bordered-dark th,
   .table-bordered-dark td {
     border: 1px solid #000;
