--- a/app/views/clientes/show.html.erb
+++ b/app/views/clientes/show.html.erb
@@ -1,14 +1,28 @@
-<!-- /*_show.html.erb*/ -->
-<div class="container mt-4">
-  <div class="mt-3">
+<!-- show.html.erb -->
+<div class="container mt-5">
+  <div class="mb-3">
     <%= link_to "Voltar", clientes_path, class: "btn btn-danger" %>
   </div>
 
-  <div class="card mt-3">
-    <div class="card-header bg-primary text-white">
-      Informações do Cliente
+  <% @clientes.each do |cliente| %>
+    <div class="card mb-3">
+      <div class="card-header bg-danger text-white">
+        Informações do Cliente
+      </div>
+      <div class="card-body">
+        <%= render 'cliente_info2', cliente: cliente %>
+      </div>
     </div>
-    <div class="card-body">
-      <%= render 'cliente_info2', cliente: @cliente %>
+
+    <div class="card">
+      <div class="card-header bg-primary text-white">
+        Veículos do Cliente
+      </div>
+      <div class="card-body">
+        <% cliente.veiculos.each do |veiculo| %>
+          <%= render 'veiculos/veiculo_info2', veiculo: veiculo %>
+        <% end %>
+      </div>
     </div>
-  </div>
+  <% end %>
+</div>
