--- a/app/views/ordem_servicos/index.html.erb
+++ b/app/views/ordem_servicos/index.html.erb
@@ -12,7 +12,7 @@
     <%= form_with(url: ordem_servicos_path, method: :get, class: 'form-inline') do |form| %>
       <div class="form-group ml-auto">
         <%= form.label :status, 'Filtrar por Status', class: 'mr-2' %>
-        <%= form.select :status, ['Todos', 'Recebido', 'Andamento', 'Concluído'], { prompt: 'Selecione um status' }, { class: 'form-control' } %>
+        <%= form.select :status, ['Todos', 'Espera', 'Andamento', 'Concluído'], { prompt: 'Selecione um status' }, { class: 'form-control' } %>
       </div>
       <%= form.submit 'Filtrar', class: 'btn btn-primary ml-2' %>
     <% end %>
