--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -8,11 +8,20 @@
       </button>
       <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
         <ul class="navbar-nav">
+         <li class="nav-item">
+            <%= link_to "Ordem de Seriço", ordem_servicos_path, class: "nav-link" %>
+          </li>
           <li class="nav-item">
             <%= link_to "Clientes", clientes_path, class: "nav-link" %>
           </li>
           <li class="nav-item">
             <%= link_to "Veículos", veiculos_path, class: "nav-link" %>
+          </li>
+            <li class="nav-item">
+            <%= link_to "Equipes", equipes_path, class: "nav-link" %>
+          </li>
+           <li class="nav-item">
+            <%= link_to "Mecânicos", mecanicos_path, class: "nav-link" %>
           </li>
           <li class="nav-item">
             <%= link_to "Serviços", servicos_path, class: "nav-link" %>
@@ -20,24 +29,14 @@
           <li class="nav-item">
             <%= link_to "Peças", pecas_path, class: "nav-link" %>
           </li>
-          <li class="nav-item">
-            <%= link_to "Mecânicos", mecanicos_path, class: "nav-link" %>
-          </li>
-          <li class="nav-item">
-            <%= link_to "Equipes", equipes_path, class: "nav-link" %>
-          </li>
-
-          <li class="nav-item">
-            <%= link_to "OS", ordem_servicos_path, class: "nav-link" %>
-          </li>
 
           <% if user_signed_in? %>
             <li class="nav-item">
-              <%= link_to 'Logout', destroy_user_session_path, method: :delete, class: "nav-link" %>
+              <%= link_to 'Sair', destroy_user_session_path, method: :delete, class: "nav-link" %>
             </li>
           <% else %>
             <li class="nav-item">
-              <%= link_to 'Login', new_user_session_path, class: "nav-link" %>
+              <%= link_to 'Entrar', new_user_session_path, class: "nav-link" %>
             </li>
           <% end %>
         </ul>
